--- a/src/Presentation/Nop.Web/Themes/X20/Content/theme/images/placeholder.html
+++ b/src/Presentation/Nop.Web/Themes/X20/Content/theme/images/placeholder.html
@@ -108,7 +108,7 @@
 
 
 
-	<body>
+	<body style="background-color: #eff3f9;">
 
 		<!-- <script>
 
@@ -166,15 +166,24 @@
 
 
 <br>
-<br>
+<br>  <!-- #575757 -->
 
-		<h2 style="font-family: Arial, Helvetica, sans-serif; color: #575757" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Enter the product URL address above, then press "Go".</h1>
-
-		<br>
-		<h2 style="font-family: Arial, Helvetica, sans-serif; color: #575757" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. When the page has loaded, click the highlighted element you wish to track.</h1>
+		<h2 style="font-family: Arial, Helvetica, sans-serif; font-weight: 100; color: #575e68  " >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Enter the product URL address above, then press "Go".</h2>
 
 		<br>
-		<h2 style="font-family: Arial, Helvetica, sans-serif; color: #575757" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3. Press "Add Monitor / Update Stock".</h1>
+		<h2 style="font-family: Arial, Helvetica, sans-serif; font-weight: lighter; color: #575e68 " >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. When the page has loaded, click the highlighted element you wish to track.</h2>
+
+		<br>
+		<h2 style="font-family: Arial, Helvetica, sans-serif; font-weight: lighter; color: #575e68 " >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3. Press "Add Monitor / Update Stock".</h2>
+
+		
+		<br><h4 style="line-height: 10%; font-family: Arial, Helvetica, sans-serif; font-weight: lighter; color: #575e68;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* Always obtain express written permission before monitoring a web page.</h4>
+
+
+
+
+
+
 
 <!-- 
 		<iframe src="file://C:\Users\Owner\Desktop\Home\Test Site\index.html" style="width: 100%;height: 300px;"></iframe>
